# aifeel

./: .gitignore  README.md  challenge.ipynb  data_exploration.ipynb  evaluate.ipynb  generate_requirements.py  huh.ipynb  predict_review_class_streamlit.py  pyproject.toml  requirements.txt  result_testing_challenge.txt  sense.ipynb
challenge_result/: result_multiNb.txt  result_nn.txt  result_svm.txt
docs/: example.md
export/model/NNClassifier/: data.npz  vectorizer.dill
export/model/SVM/: data.npz  svm_model.dill
export/model/TFIDF-Model-Daro/: logistic_regression_model.pkl  multinomial_nb_model.pkl
export/model/TFIDFModelClassifier/: logistic_regression_model.dill  multinomial_nb_model.dill  vectorizer.dill
requirements/: dev.txt  full.txt  minimal.txt  pandas.txt
src/aifeel/: __main__.py
src/aifeel/corpora/: testing-challeng.txt
src/aifeel/model/: __init__.py  custom_feature_extraction_model-deprecated.ipynb  custom_feature_extraction_model.ipynb  example_model.py  model.py  nn.py  svm_model.ipynb  tf-idf_with_four_models.ipynb  tf-idf_with_models.ipynb  word2vec_with_models.ipynb
src/aifeel/util/: __init__.py  evaluate.py  feature_extraction.py  preprocess.py
